--- a/assets/sass/var.scss
+++ b/assets/sass/var.scss
@@ -1,8 +1,9 @@
 @charset "utf-8";
 $theme_color:#930784;
-$primary-blue:#003399;
+$primary-blue:#666699;
 $primary-green:#CCCC33;
 $border-color:rgba(210,210,210,0.6);
 $primary-outline:rgba(145,6,133,0.2);
+$primary-half:rgba(145,6,133,0.75);
 $primary-grey:rgba(220,220,220,0.5);
 $danger:#dd514c;
