Project page development

--- a/assets/sass/App.scss
+++ b/assets/sass/App.scss
@@ -71,6 +71,7 @@ body,.ant-card{
   margin: 65px 50px 0 50px;
   background-color: white;
   border: 1px solid $primary-outline;
+  padding: 5px;
 }
 .ant-layout-footer{
   text-align: center;
