DashBoard.js and login.js (style)

--- a/assets/components/dashboard/dashboard.scss
+++ b/assets/components/dashboard/dashboard.scss
@@ -1,7 +1,7 @@
 @import "../../sass/var";
 .content{
   .button-purple{
-    background:rgba(145,6,133,0.75);
+    background:#930784;
     color:white;
     margin-top:10px;
   }
