--- a/assets/components/dashboard/modalDialog.scss
+++ b/assets/components/dashboard/modalDialog.scss
@@ -7,7 +7,7 @@
 .dialog-footer{
   text-align: center;
   &-button{
-    background:$primary-half;
+    background:#930784;
     min-width:75px;
     color:white;
   }
