project  page dev

--- a/assets/components/project/project.scss
+++ b/assets/components/project/project.scss
@@ -223,6 +223,9 @@
       }
       >.add-input4{
         padding-left: 57px;
+        >.big-input{
+          margin-left: 16px;
+        }
       }
       >div{
         padding-top: 5px;
