--- a/assets/components/dashboard/dashboard.scss
+++ b/assets/components/dashboard/dashboard.scss
@@ -19,9 +19,10 @@
       color:#930784;
     }
     &-icon-small{
-      font-size:14px;
+      font-size:16px;
       color:#930784;
       margin:1px 4px;
+      cursor: pointer;
     }
     &-secondary{
     margin-bottom:16px;
