--- a/assets/components/project/project.scss
+++ b/assets/components/project/project.scss
@@ -1,7 +1,17 @@
 @import "../../sass/var";
 .project-status-link{
-  font-size: 13px;
-  color: rgba(0, 0, 0, 0.65);;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.65);
+}
+.project-status-link:hover{
+  color: $theme_color;
+}
+.project-status{
+  text-align: left;
+  display: inline-block;
+  width: 60px;
+  margin-left: 5px;
+  color: $primary-half;
 }
 .pagination{
   float: right;
@@ -31,9 +41,7 @@
   }
 
 }
-.project-status-link:hover{
-  color: $theme_color;
-}
+
 .content-title-big{
   color: $theme_color;
 }
@@ -77,17 +85,14 @@
 
 
     > .filter {
-      padding-bottom: 25px;
-      > .status {
-        padding-left: 30px;
+      font-size: 14px!important;
+      padding: 0 0 25px 6px;
+      > .status,> .project {
         padding-right: 15px;
+        font-weight:700;
       }
       > .ant-select {
-        padding-right: 40px;
-        width: 120px;
-      }
-      > .project {
-        padding-left: 18px;
+        width: 200px;
         padding-right: 15px;
       }
     }
@@ -108,7 +113,6 @@
                     padding-top: 15px;
                   }
                   > .ant-col-16 {
-                    background-color: rgba(1, 1, 1, 0.5);
                     padding-top: 10px;
                     > .brief-content {
                       > span {
@@ -121,15 +125,16 @@
                       }
                     }
                     background: rgba(220, 220, 220, 0.4);
-                    height: 155px;
+                    height: 110px;
+                    font-size: 14px;
                   }
                   > .ant-col-8 {
                     > div {
-                      padding-left: 50px;
-                      padding-top: 20px;
+                      padding-left: 20px;
+                      //padding-top: 20px;
 
                       > .ant-row {
-
+                        line-height: 1;
                         > div {
                           > text {
                             padding-left: 10px;
@@ -145,6 +150,26 @@
 
                         > .second-right {
                           padding-top: 15px;
+
+                        }
+                        >.right-info{
+                          font-size: 14px!important;
+                          color: $theme_color;
+                          text.members{
+                            background: $border-color;
+                            display: inline-block;
+                            text-align: center;
+                            padding: 5px 5px;
+                            margin-left: 10px;
+                          }
+                          .anticon-edit{
+                            padding: 5px 5px;
+                          }
+                          >.info-label{
+                            display: inline-block;
+                            color: #333;
+                            font-weight:800;
+                          }
                         }
                         > .third-right {
                           padding-top: 15px;
@@ -180,7 +205,7 @@
                     margin: 4px
                   }
                   > span {
-                    padding-right: 20px;
+                    padding-right: 0;
                   }
                 }
               }
