Project page develop

--- a/assets/sass/App.scss
+++ b/assets/sass/App.scss
@@ -101,3 +101,9 @@ body,.ant-card{
   text-align: center;
   color: $theme_color;
 }
+.ant-collapse > .ant-collapse-item{
+border-radius: 5px;
+
+
+}
+
