--- a/assets/components/project/project.scss
+++ b/assets/components/project/project.scss
@@ -264,6 +264,10 @@
           margin-right:10px;
         }
       }
+      .team-member{
+        width:60%;
+        margin-left:15px
+      }
     }
     >.addContent{
       >.addTeamMember{
@@ -322,6 +326,24 @@
     }
   }
 }
+.collapseStyle{
+  border:none;
+  position:relative;
+};
+.collapseStyle:before{
+  content: "";
+  position: absolute;
+  top: -50%;
+  bottom: -50%;
+  left: -50%;
+  right: -50%;
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+  border:1px solid #dcdcdc;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
 .ant-pagination-item-active{
   background-color: $theme_color;
   border:1px solid rgba(1,1,1,0)
