--- a/assets/components/project/project.scss
+++ b/assets/components/project/project.scss
@@ -218,7 +218,7 @@
 }
 .ant-modal-content{
   >.ant-modal-header{
-    border-bottom: 1px solid rgba(1,1,1,0);
+    //border-bottom: 1px solid rgba(1,1,1,0);
   }
   >.ant-modal-footer{
     display: flex;
@@ -228,9 +228,6 @@
     >.ant-btn-primary{
       background: $theme_color;
       border:1px solid rgba(1,1,1,0)
-    }
-    >button{
-
     }
   }
   >.ant-modal-body{
