Project page develop

--- a/assets/components/project/project.scss
+++ b/assets/components/project/project.scss
@@ -264,7 +264,7 @@
           margin-right:10px;
         }
       }
-      .team-member{
+      .select-style{
         width:60%;
         margin-left:15px
       }
@@ -288,23 +288,16 @@
       }
       display: flex;
       flex-direction: column;
-      >.add-input1{
+      >.add-input{
         padding-left: 50px;
         >.ant-select{
           margin-left:15px;
         }
       }
-      >.add-input2{
-        padding-left: 9px;
-      }
-      >.add-input3{
-        padding-left: 5px;
-      }
-      >.add-input4{
-        padding-left: 57px;
-        >.big-input{
-          margin-left: 16px;
-        }
+      .table-title{
+        display:inline-block;
+        width:80px;
+        text-align: right;
       }
       >div{
         padding-top: 5px;
@@ -347,4 +340,21 @@
 .ant-pagination-item-active{
   background-color: $theme_color;
   border:1px solid rgba(1,1,1,0)
+}
+.error-tip{
+  font-size:16px;
+  color:#f04134;
+  margin-left:10px;
+}
+.dialog-footer{
+  text-align: center;
+  padding:20px 0;
+  &-button{
+    background:#930784;
+    min-width:75px;
+    color:white;
+  }
+  .cancel{
+    margin-left:25px;
+  }
 }
