--- a/assets/components/project/project.scss
+++ b/assets/components/project/project.scss
@@ -39,6 +39,7 @@
     }
     th,td{
       padding: 10px 8px!important;
+      font-size:12px;
     }
     tr:nth-child(even){
       background: #efefef;
@@ -173,7 +174,7 @@
                           >.info-label{
                             display: inline-block;
                             color: #333;
-                            font-weight:800;
+                            font-weight:600;
                           }
                         }
                         > .third-right {
