--- a/assets/components/dashboard/dashboard.scss
+++ b/assets/components/dashboard/dashboard.scss
@@ -25,8 +25,8 @@
       cursor: pointer;
     }
     &-secondary{
-    margin-bottom:16px;
-    border:1px solid #d9d9d9;
+      margin-bottom:16px;
+      border:1px solid #d9d9d9;
     }
   }
   .ant-card-head-title{
@@ -37,7 +37,7 @@
     font-size:14px !important;
     margin-bottom:10px;
     &-table{
-     line-height:30px;
+      line-height:30px;
       color:#930784;
       margin:20px auto;
       width:70%;
@@ -80,4 +80,16 @@
     text-align: center;
     background:red;
   }
+}
+.dialog-footer{
+  margin-left:33.334%;
+  padding:15px 0;
+  &-button{
+    background:#930784;
+    min-width:75px;
+    color:white;
+  }
+}
+.cancel{
+  margin-left:30px;
 }
