--- a/assets/components/project/project.scss
+++ b/assets/components/project/project.scss
@@ -27,7 +27,6 @@
   }
   .ant-table-column-sorter{
     margin-left: 5px;
-
     .anticon{
       font-size: 14px!important;
     }
@@ -247,7 +246,6 @@
       }
       .select-style{
         width:60%;
-        margin-left:15px
       }
     }
     >.addContent{
@@ -269,12 +267,6 @@
       }
       display: flex;
       flex-direction: column;
-      >.add-input{
-        padding-left: 50px;
-        >.ant-select{
-          margin-left:15px;
-        }
-      }
       .table-title{
         display:inline-block;
         width:80px;
@@ -327,16 +319,16 @@
   margin-left:10px;
 }
 .dialog-footer{
-  text-align: center;
-  padding:20px 0;
+  margin-left:33.334%;
+  padding:15px 0;
   &-button{
     background:#930784;
     min-width:75px;
     color:white;
   }
-  .cancel{
-    margin-left:25px;
-  }
+}
+.cancel{
+  margin-left:30px;
 }
 .ant-popover-title{
   font-size:14px!important;
