project bug fixed

--- a/assets/components/login/login.scss
+++ b/assets/components/login/login.scss
@@ -35,6 +35,8 @@ body,html{
       &-submit{
         margin-top:10px;
         width:100%;
+          background:#930784;
+          color:white;
       }
     }
   }
