--- a/assets/components/dashboard/dashboard.scss
+++ b/assets/components/dashboard/dashboard.scss
@@ -25,7 +25,7 @@
       cursor: pointer;
     }
     &-secondary{
-      margin-bottom:16px;
+      margin-bottom:12px;
       border:1px solid #d9d9d9;
     }
   }
@@ -84,11 +84,11 @@
 .dialog-footer{
   margin-left:33.334%;
   padding:15px 0;
-  &-button{
-    background:#930784;
-    min-width:75px;
-    color:white;
-  }
+}
+.button-style{
+  background:#930784;
+  min-width:75px;
+  color:white;
 }
 .cancel{
   margin-left:30px;
