project bug fixed

--- a/assets/sass/App.scss
+++ b/assets/sass/App.scss
@@ -137,7 +137,8 @@ body,.ant-card{
 }
 .ant-collapse > .ant-collapse-item{
   border-radius: 5px;
-
-
+}
+.highcharts-credits{
+  display:none!important;
 }
 
