--- a/assets/sass/App.scss
+++ b/assets/sass/App.scss
@@ -51,7 +51,7 @@ body,.ant-card{
   width: 100%;
   height:50px;
   top:0;
-  box-shadow:  1px 0 2px 1px $primary-outline;
+  box-shadow: 2px 3px 8px rgba(0, 0, 0, 0.24);
   >.logo{
     height: 50px;
     line-height: 50px;
